History
=======

Version 0.5.2 - Unreleased
--------------------------

Version 0.5.1 - 2008-08-15
--------------------------

- Fixed a bug where a collector would have a ``Title`` property; this
  should be a method. [malthe]

- Added permissions to send, preview and manage newsletter. No upgrade
  steps required - just reinstall. By default - send and preview is 
  allowed to reviewer and manager role, manage newsletters for 
  managers only. [saily]

Version 0.5.0 - 2008-07-29
--------------------------

- Display a more user friendly error message when the user attempts to
  add duplicate subscriptions.
  [miziodel, nouri]

- List of subscribers can now be uploaded and downloaded in CSV format!
  [skatja]
  
- Depend on 0.3 or higher of plone.app.z3cform.
  [nouri]

Version 0.4.1 - 2008-07-23
--------------------------

- Fix ``RuntimeError: maximum recursion depth exceeded`` error in
  ``Module collective.dancing.browser.portlets.channelsubscribe, line
  253, in channel`` when displaying portlets that were created prior
  to 0.4b4.
  [nouri]

Version 0.4 - 2008-07-23
------------------------

New features
~~~~~~~~~~~~

- Added subject, confirmation_subject and forgot_secret_subject to
  vars of composer for easy customization.  Defaults are unchanged.
  [tmog]

- Added sender name, sender address and reply-to address as per
  composer configuration. Composer configuration is now available
  in the new Composers fieldset of the channel edit view.
  [tmog]

- Allow for easier subclassing of HTMLComposer.  The ``_vars()``
  method is now more generally applicable and easily to override.
  [nouri]

- Made adding thirdparty Channels possible. This works the same as
  with Collectors - you simply implement you custom channel and add
  a factory to the collective.dancing.channel.channels list.
  Preview and edit forms are now class methods on ManageChannelView
  to make it easier to subclass for your custom channels.
  [tmog]
